--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.3.8",
-    "next": "16.0.1",
-    "react": "19.2.0",
+    "next": "^16.0.1",
+    "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
