--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "formik": "^2.4.9",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-bootstrap": "^2.10.10",
