--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.13.1",
     "formik": "^2.4.9",
     "framer-motion": "^12.23.24",
+    "lightningcss": "^1.30.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.1",
     "react": "19.2.0",
