--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "bootstrap-icons": "^1.13.1",
     "formik": "^2.4.9",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "lightningcss": "^1.30.2",
     "lucide-react": "^0.554.0",
+    "mapillary-js": "^4.1.2",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "recharts": "^3.4.1",
     "swiper": "^12.0.3",
     "uuid": "^13.0.0",
